bank-project/backendapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-backend-deployment
  template:
    metadata:
      labels:
        app: bank-backend-deployment
    spec:
      serviceAccountName: bank-app-ksa
      containers:
      - name: bank-backend-container
        image: us-central1-docker.pkg.dev/development-423908/bank-repo/bank-app@sha256:5bb5da831e044ce5cfc05a43aaaa172f8668d563e451f8fbc16ffb6aea6e6848
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "300m"
