bank-project/frontend.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend-banking-deployment
# spec:
#   replicas: 1 
#   selector:
#     matchLabels:
#       app: frontend-banking-deployment
#   template:
#     metadata:
#       labels:
#         app: frontend-banking-deployment
#     spec:
#       containers:
#       - name: frontend-bank-container
#         image: registry.digitalocean.com/testnico-registry/bank-app-frontend:staging-8f4e29d6a0c01acc3f2e5157cd682943f286903f
#         ports:
#         - containerPort: 3000
#         env:
#         - name: REACT_APP_API_URL
#           valueFrom:
#             configMapKeyRef:
#               name: bank-config
#               key: REACT_APP_API_URL

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-banking-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-banking-deployment
  template:
    metadata:
      labels:
        app: frontend-banking-deployment
    spec:
#      imagePullSecrets:
#      - name: registry-testnico-registry
      serviceAccountName: bank-app-ksa
      containers:
      - name: frontend-bank-container
        image: us-central1-docker.pkg.dev/development-423908/bank-repo/bank-app
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "300m"
