bank-project/backend-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: bank-ingress
#   annotations:
#     kubernetes.io/ingress.class: "external-nginx"
#     cert-manager.io/cluster-issuer: http-01-production
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
# spec:
#   ingressClassName: external-nginx
#   tls:
#   - hosts:
#     - bankapi.teamcloudup.online  # bankend url
#     - bank.teamcloudup.online     # frontend url
#     secretName: bank-teamcloudup-online
#   rules:
#   - host: bank.teamcloudup.online
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: bank-frontend-service
#             port:
#               number: 3000
#   - host: bankapi.teamcloudup.online
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: bank-backend-service
#             port:
#               number: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bank.34.138.187.167.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-frontend-service
            port:
              number: 3000
  - host: bankapi.34.138.187.167.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-backend-service
            port:
              number: 8080
